syntax = "proto3";

package ivoice;

service IVoiceToolkit {
  rpc transcribeAudioFile (TranscribeRequest) returns (stream TranscribeResponse) {}
  rpc generateResultAbstract (ResultContent) returns (ResultAbstract) {}
}

message ResultContent {
  string content = 1;
}

message ResultAbstract {
  string abstract = 1;
}

message Segment {
  float start = 1;
  float end = 2;
}

message TranscribeRequest {
  string remoteFilePath = 1;
}


message TranscribeResponse {
  Segment segment = 1;
  int32 label = 2;
  string word = 3;
}